Convert most MKWeapons serialized objects to Codecs